crates/cribo/tests/snapshots/execution_results@bundle_third_party_sys_modules_assigned_alias.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_sys_modules_assigned_alias/main.py
---
ExecutionResults {
    status: Success,
    stdout: "assigned-alias-aware",
    stderr: "",
}
