crates/cribo/tests/snapshots/execution_results@bundle_third_party_unrelated_version_method.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_unrelated_version_method/main.py
---
ExecutionResults {
    status: Success,
    stdout: "fake-version:provider\nbundled-provider",
    stderr: "",
}
