crates/cribo/tests/snapshots/execution_results@class_pattern_codegen.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/class_pattern_codegen/main.py
---
ExecutionResults {
    status: Success,
    stdout: "api:event:hello:3\nmapping:first:1:fixture:3\nor-pattern\nentry:200:api:hello:3",
    stderr: "",
}
