crates/cribo/tests/snapshots/execution_results@conditional_class_identity.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_class_identity/main.py
---
ExecutionResults {
    status: Success,
    stdout: "True kept",
    stderr: "",
}
