crates/cribo/tests/snapshots/execution_results@conditional_exception_binding.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_exception_binding/main.py
---
ExecutionResults {
    status: Success,
    stdout: "visible\nTrue",
    stderr: "",
}
