crates/cribo/tests/snapshots/execution_results@conditional_import_loop_else.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_import_loop_else/main.py
---
ExecutionResults {
    status: Success,
    stdout: "name error\nname error again",
    stderr: "",
}
