crates/cribo/tests/snapshots/execution_results@conditional_loop_reentrant_visibility.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_loop_reentrant_visibility/main.py
---
ExecutionResults {
    status: Success,
    stdout: "loop",
    stderr: "",
}
