crates/cribo/tests/snapshots/execution_results@conditional_match_guard_binding.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_match_guard_binding/main.py
---
ExecutionResults {
    status: Success,
    stdout: "captured\nrebound\nmutated\nTrue",
    stderr: "",
}
