crates/cribo/tests/snapshots/execution_results@conditional_module_bindings.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_module_bindings/main.py
---
ExecutionResults {
    status: Success,
    stdout: "first\nprivate\nprivate\nsecond\nupdated\nsecond\nfirst\nfirst\nannotated\n2\nleft ['middle'] right\nloop\nFalse\nwith ['rest']\nmatched {'rest': 'captured'}",
    stderr: "",
}
